--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "password-validator": "^5.3.0",
     "pino": "^8.15.0",
     "pino-pretty": "^10.2.0"
+  },
+   "engines": {
+    "node": "16.16.0"
   }
 }
